--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -2,6 +2,7 @@ $font-size-primary: 24px;
 $font-size-secondary: 20px;
 $font-weight-semibold: 600;
 $line-height-button: 1.2;
+$line-height-20: 1.25;
 $color-primary: #3f5d45;
 $color-secondary: #eaf0ed;
 $color-accent: #ffe180;
