--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,3 +1,4 @@
+/* 導覽列 */
 .nav {
     justify-content: space-between;
     align-items: center;
@@ -29,7 +30,7 @@
 
 
 
-
+/* 郵件訂閱 */
 .mail {
     align-items: center;
 
@@ -73,6 +74,8 @@
     }
 }
 
+
+/* 頁尾資訊 */
 .footer {
     background: $color-secondary;
 
