修改：補連結、微調 class

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -53,6 +53,10 @@ button {
     display: flex;
 }
 
+.jc-sb {
+    justify-content: space-between;
+}
+
 .bold {
     font-weight: $font-weight-semibold;
 }
