--- a/css/all.css
+++ b/css/all.css
@@ -182,6 +182,10 @@ button:hover {
   display: flex;
 }
 
+.jc-sb {
+  justify-content: space-between;
+}
+
 .bold {
   font-weight: 600;
 }
@@ -293,25 +297,29 @@ button:hover {
   border-radius: 0 10px 10px 0;
 }
 .subscription button:hover {
-  opacity: 0.7;
+  opacity: 0.5;
+}
+.subscription i {
+  font-size: 20px;
 }
 
 /* 頁尾資訊 */
 .footer {
   background: #eaf0ed;
 }
-.footer .row {
-  justify-content: space-between;
-}
 
 .info {
   flex-direction: column;
 }
 .info img {
-  width: 171px;
+  max-width: 171px;
 }
+.info a,
 .info p {
   font-family: "Helvetica Neue", Arial, sans-serif;
+}
+.info a:hover {
+  text-decoration: underline;
 }
 .info .sns {
   font-size: 32px;
